# HardwareModule

./: CMakeLists.txt  notes.txt  sdkconfig
main/: CMakeLists.txt  main.cpp
main/commands/: CommandHandler.cpp  CommandHandler.h
main/status_lights/: StatusLightController.cpp  StatusLightController.h  StatusLightHandler.cpp  StatusLightHandler.h  StatusLights.cpp  StatusLights.h
main/status_lights/animations/: ErrorAnimation.cpp  ErrorAnimation.h  FadeInAnimation.cpp  FadeInAnimation.h  FadeOutAnimation.cpp  FadeOutAnimation.h  LoadingAnimation.cpp  LoadingAnimation.h  PulseAnimation.cpp  PulseAnimation.h  StatusLightAnimation.cpp  StatusLightAnimation.h
main/status_lights/transitions/: BrightnessChangeTransition.cpp  BrightnessChangeTransition.h  ColorChangeTransition.cpp  ColorChangeTransition.h  StatusLightTransition.cpp  StatusLightTransition.h
